[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Meise Botanic Garden Python packages namespace"
version = "0.1.0"
description = "A subpackage of mbg for documentation purposes"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}

[project.urls]
homepage = "https://www.plantentuinmeise.be"
repository = "https://github.com/AgentschapPlantentuinMeise/mbg"
documentation = "https://github.com/AgentschapPlantentuinMeise/mbg/docs"

[project.dependencies]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
namespace_packages = ["mbg"]